--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,14 +3,20 @@
 %html{"xmlns" => "http://www.w3.org/1999/xhtml"}
   %head
     %meta{ 'http-equiv' => 'content-type', :content => 'text/html; charset=utf-8'}
-    %meta{ 'property' => 'og:site_name', :content => 'パーティを開こう！' }
-    %meta{ 'name' => 'description', :content => 'イージーパーティで簡単に飲み会/パーティを管理。イージーパーティで幹事さんの負担を減らせます' }
+    %meta{ 'property' => 'og:site_name', :content => 'simpleplay\'s Lifelog' }
+    %meta{ 'name' => 'description', :content => '思いついたことを書く場所' }
     %title MyBlog
     = stylesheet_link_tag :all, :media => 'screen,projection'
     = javascript_include_tag :all
     %link{ :rel => 'shortcut icon', :media => 'image/x-icon', :href => '/images/party.ico' }
   %body.container_12
     .header
+      .admin
+        - if @blog
+          = link_to 'Write new article', new_article_path
+          = link_to "Logout" , {:controller => "blogs", :action => "signout"}
+        - else
+          = link_to "Login", {:controller => "blogs", :action => "login"}
       %h1
         %a= link_to 'simpleplay\'s Lifelog','/'
       .cl
