--- a/app/views/articles/_right_box.html.haml
+++ b/app/views/articles/_right_box.html.haml
@@ -1,11 +1,3 @@
-- if @blog
-  = link_to 'Write new article', new_article_path
-  = link_to "Logout" , {:controller => "blogs", :action => "signout"}
-
-- else
-  = link_to "Login", {:controller => "blogs", :action => "login"}
-%br
-%br
 %h1 Recently Articles
 .option
   - @articles.each do |article|
@@ -19,4 +11,4 @@
 .option
   - @categories.each do |c|
     = link_to c.name, c
-    (1)
+    = "(#{c.article_num})"
