--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -92,6 +92,14 @@ button {
       color: white;
       background: #FD0CB6; }
 
+.admin {
+  float: right;
+  margin-right: 10px;
+  margin-top: 30px;
+  color: #fd0cb6; }
+  .admin a {
+    color: #fd0cb6; }
+
 .header ul.nav {
   float: right; }
   .header ul.nav li {
@@ -314,6 +322,9 @@ input.ta {
 .article-title {
   font-size: 25px;
   font-weight: bold; }
+  .article-title a {
+    text-decoration: none;
+    color: #333333; }
 
 .article-desc {
   padding: 10px 0px 10px 10px; }
