--- a/app/views/blogs/login.html.haml
+++ b/app/views/blogs/login.html.haml
@@ -4,3 +4,6 @@
   password
   = password_field_tag "password",""
   = submit_tag "Sign in!!"
+
+- if Blog.all.size == 0
+  = link_to "Create Account", new_blog_path
