--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -5,12 +5,13 @@
     - article.categories.each do |c|
       = link_to c.name,c
 
-  .article-desc= br(article.description.slice(0..250)) + "..."
-  .article-opt
-    = link_to 'More', article
-    \|
-    = link_to '>> edit', edit_article_path(article)
-    \|
-    = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
+  .article-desc= br(article.description)
+  - if @blog
+    .article-opt
+      = link_to 'More', article
+      \|
+      = link_to '>> edit', edit_article_path(article)
+      \|
+      = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
 
 
