--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,12 +3,12 @@
 %html{"xmlns" => "http://www.w3.org/1999/xhtml"}
   %head
     %meta{ 'http-equiv' => 'content-type', :content => 'text/html; charset=utf-8'}
-    %meta{ 'property' => 'og:site_name', :content => 'simpleplay\'s Lifelog' }
+    %meta{ 'property' => 'og:site_name', :content => 'Lifelog' }
     %meta{ 'name' => 'description', :content => '思いついたことを書く場所' }
     %title MyBlog
     = stylesheet_link_tag :all, :media => 'screen,projection'
     = javascript_include_tag :all
-    %link{ :rel => 'shortcut icon', :media => 'image/x-icon', :href => '/images/party.ico' }
+    -# %link{ :rel => 'shortcut icon', :media => 'image/x-icon', :href => '/images/party.ico' }
   %body.container_12
     .header
       .admin
