--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -14,4 +14,4 @@
       \|
       = link_to 'Destroy', {:action => 'destroy',:id => article.id}, :confirm => 'Are you sure?', :method => :delete
 
-
+= paginate @articles
