--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,11 +37,11 @@
         .footer2
           %h1 On the web
           .option
-            %p= link_to 'About.me','https://about.me/tomoyamachi'
-            %p= link_to 'Twitter','https://twitter.com/tomoyamachi'
-            %p= link_to 'Facebook', 'http://facebook.com/tomoyamachi'
-            %p= link_to 'Tumblr','https://simpleplay.tumblr.com/'
-            %p= link_to 'TechBlog','https://simple-play.com/'
+            %p= link_to 'About.me','https://about.me/tomoyamachi', { :target => 'blank' }
+            %p= link_to 'Twitter','https://twitter.com/tomoyamachi', { :target => 'blank' }
+            %p= link_to 'Facebook', 'http://facebook.com/tomoyamachi', { :target => 'blank' }
+            %p= link_to 'Tumblr','http://simpleplay.tumblr.com/', { :target => 'blank' }
+            %p= link_to 'TechBlog','http://www.simple-play.com/', { :target => 'blank' }
         .footer3
           %h1 Skill
           .option
