--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -3,7 +3,7 @@
 %h1.article-title= @article.title
 .article-category
   In :
-  - article.categories.each do |c|
+  - @article.categories.each do |c|
     = link_to c.name,c
 
 %p.article-desc= br(@article.description)
