change about link

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,7 +37,7 @@
         .footer2
           %h1 On the web
           .option
-            %p= link_to 'About.me','https://about.me/tomoyamachi', { :target => 'blank' }
+            %p= link_to 'Portfolio','https://about.simple-play.com/', { :target => 'blank' }
             %p= link_to 'Twitter','https://twitter.com/tomoyamachi', { :target => 'blank' }
             %p= link_to 'Facebook', 'http://facebook.com/tomoyamachi', { :target => 'blank' }
             %p= link_to 'Tumblr','http://simpleplay.tumblr.com/', { :target => 'blank' }
