add right-box pagination

--- a/app/views/articles/_right_box.html.haml
+++ b/app/views/articles/_right_box.html.haml
@@ -2,12 +2,15 @@
 %h1 Categories
 .option
   - @categories.each do |c|
-    = link_to c.name, c
-    = "(#{c.article_num})"
+    :erb
+      <%= link_to c.name, c %>(<%= c.article_num %>)
 %br
 %h1 Recently Articles
 .option
-  - Article.limit(50).select('id,title').each do |article|
-    -#= article.created_at.in_time_zone('Tokyo').strftime("%m/%d")
-    = link_to article.title,article
-    %br
+  - @right_articles.each do |article|
+    %p
+      - if @blog
+        = article.created_at.in_time_zone('Tokyo').strftime("%d")
+      = link_to article.title,article
+  #right
+    = paginate @right_articles, :param_name => :right
