--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -117,7 +117,7 @@ $pink: #FD0CB6;
       a{text-decoration: none;color: $pink;}
         }
     #right{
-      .pagination{font-size: 13px;margin-right:40px;
+      .pagination{font-size: 13px;margin:10px 40px 0 0;
         a{color: black;}
           }
         }
