put article's chars

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -4,7 +4,8 @@
     In :
     - article.categories.each do |c|
       = link_to c.name,c
-
+    &nbsp;&nbsp;Chars :
+    = article.description.size
   .article-desc= br(article.description)
   - if @blog
     .article-opt
